--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "description": "",
     "authors": [],
     "require": {
-        "typo3/cms-core": "^8.7.1"
+        "typo3/cms-core": "~8.7.0 || ~9.5.0",
+        "typo3/cms-form": "~8.7.0 || ~9.5.0"
     },
     "autoload": {
         "psr-4": {
