--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "authors": [],
     "require": {
         "typo3/cms-core": "~8.7.0 || ~9.5.0",
-        "typo3/cms-form": "~8.7.0 || ~9.5.0"
+        "typo3/cms-form": "~8.7.0 || ~9.5.0",
+        "typo3/cms-filelist": "~8.7.0 || ~9.5.0"
     },
     "autoload": {
         "psr-4": {
@@ -18,7 +19,26 @@
         }
     },
     "replace": {
-        "form_editor_launcher": "self.version",
+        "andreaskiessling/form-editor-launcher": "self.version",
         "typo3-ter/form-editor-launcher": "self.version"
+    },
+    "config": {
+        "vendor-dir": ".Build/vendor",
+        "bin-dir": ".Build/bin"
+    },
+    "extra": {
+        "typo3/cms": {
+            "cms-package-dir": "{$vendor-dir}/typo3/cms",
+            "web-dir": ".Build/Web"
+        }
+    },
+    "repositories": {
+        "grumphp-conventions-typo3": {
+            "type": "vcs",
+            "url": "https://github.com/akiessling/grumphp-conventions-typo3.git"
+        }
+    },
+    "require-dev": {
+        "andreaskiessling/grumphp-conventions-typo3": "dev-master"
     }
 }
